remove z-indexes from drawers, correctly handle multiple simultaneous drawers

--- a/src/drawer/drawer.less
+++ b/src/drawer/drawer.less
@@ -9,7 +9,6 @@ material-drawer,
     width: @sidenav-default-width;
     top: 0;
     bottom: 0;
-    z-index: 11;
     background-color: #fff;
     overflow: auto;
 
@@ -44,7 +43,6 @@ material-drawer,
     bottom: 0;
     width: 100%;
     left: -100000px;
-    z-index: 10;
     background-color: rgba(0, 0, 0, 0);
 
     &.material-backdrop-opened,
